# volumetric-capture-system

./: .gitignore  LICENSE  Makefile  README.md  REFERENCES.md  project_manifest.json  pyproject.toml
config/: node_config.yaml
docs/: data_contract.md  development_status.md
examples/: session_manifest.example.json
prompts/: AGENTS.md  hardware_agent_prompt.md  reconstruction_agent_prompt.md  software_agent_prompt.md
schemas/: capture_manifest.schema.json
scripts/: capture_node_skeleton.py
specs/: 01_system_overview.md  02_hardware_spec.md  03_software_architecture.md  04_data_pipeline.md  05_calibration_and_reconstruction.md  06_realtime_preview_and_ai.md  07_implementation_plan.md  08_risks_and_decisions.md  09_procurement_checklist.md
src/volcap/: __init__.py  capture.py  cli.py  config.py  exporters.py  jsonl.py  models.py  preflight.py  qa.py  rawpack.py  session.py  validate.py
tests/: test_config.py  test_exporters.py  test_preflight.py  test_qa.py  test_simulated_capture.py
